sdks/novus-mundus-ts/tests/results/23-lifecycle-run2.txt
bun test v1.2.10 (db2e7d7f)

tests/e2e/23-lifecycle.test.ts:

[1m[34m━━━ Full Game Lifecycle - Setup ━━━[0m
[validator] Verifying program binaries...
[validator] All binaries found.
[validator] Killing any existing validator...
[validator] Cleared old ledger.
[validator] Starting solana-test-validator --reset ...
[validator] Programs: Novus Mundus, MPL Core, TLD House, ALT Name Service
[validator] Waiting for RPC... (0.8s)
[validator] Ready in 1.4s.
[setup] Airdropping SOL...
[setup] Initializing GameEngine + ShopConfig...
[setup] Initializing cities, heroes, research, shop items (parallel)...
[setup] All infrastructure ready in 2.4s.
[36m  ▸ Admin: Creating castle[0m
[2m[onchain][0m [2m4VchN6PTcJ..[0m [36m⚡ CastleCreated[0m [2mcastle=CjJwhqmN.. castleName=TestCastle cityId=0 castleId=0 tier=0 timestamp=1770122930[0m
[2m[onchain][0m [2m4VchN6PTcJ..[0m [35mcreate castle[0m
[2m[onchain][0m [2m4VchN6PTcJ..[0m [33mTotal 4,064 / 200,000 CU[0m
[32m  ✓ Castle created[0m
[36m  ▸ Admin: Creating arena season[0m
[2m[onchain][0m [2m3thVKj9Fi8..[0m [36m⚡ KingdomArenaSeasonStarted[0m [2mkingdomId=0 gameEngine=A1y9ZYn7.. seasonId=0 startTime=1770122931 endTime=1770727731 prizePool=0[0m
[2m[onchain][0m [2m3thVKj9Fi8..[0m [35mcreate arena season[0m
[2m[onchain][0m [2m3thVKj9Fi8..[0m [33mTotal 7,313 / 200,000 CU[0m
[32m  ✓ Arena season created[0m
[36m  ▸ Admin: Creating dungeon template[0m
[2m[onchain][0m [2m9dbN7JPR1y..[0m [31m✗ tx failed[0m
[2m[onchain][0m [2m9dbN7JPR1y..[0m [35mcreate dungeon template[0m
[2m[onchain][0m [2m9dbN7JPR1y..[0m [33mTotal 293 / 200,000 CU[0m
[2m[onchain][0m [2m9dbN7JPR1y..[0m [31mProgram J4DxMg1RfwRzjpZ3N6D1ULNjuwLHuhe6qLNeX9rYNz3V failed: custom program error: 0x1777[0m

# Unhandled error between tests
-------------------------------
2174 |       default:
2175 |         {
2176 |           message = `Unknown action '${(a => a)(action)}'`;
2177 |         }
2178 |     }
2179 |     super(message);
           ^
error: Transaction 9dbN7JPR1ygUeB2dfdDKqfBApFKMDNpMPJsPijzuqSakHg7PSoxeApTgrVAYYb25H1ydeQxAVVzhy9Mrgr5z6ru resulted in an error. 
Status: ({"err":{"InstructionError":[0,{"Custom":6007}]}}). 
Catch the `SendTransactionError` and call `getLogs()` on it for full details.
  signature: "9dbN7JPR1ygUeB2dfdDKqfBApFKMDNpMPJsPijzuqSakHg7PSoxeApTgrVAYYb25H1ydeQxAVVzhy9Mrgr5z6ru",
 transactionMessage: "Status: ({\"err\":{\"InstructionError\":[0,{\"Custom\":6007}]}})",
 transactionLogs: undefined,

      at new SendTransactionError (/Users/k/solana/game/vig-internal/sdks/novus-mundus-ts/node_modules/@solana/web3.js/lib/index.cjs.js:2179:5)
      at <anonymous> (/Users/k/solana/game/vig-internal/sdks/novus-mundus-ts/node_modules/@solana/web3.js/lib/index.cjs.js:2302:13)
      at /Users/k/solana/game/vig-internal/sdks/novus-mundus-ts/tests/e2e/23-lifecycle.test.ts:189:1
-------------------------------

(fail) Full Game Lifecycle > runs the complete game lifecycle across all 24 systems

 0 pass
 1 fail
 1 error
Ran 1 tests across 1 files. [6.86s]
